Makefile now receives its CC from the command line.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@89 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/libpng-1.2.8/scripts/makefile.linux
+++ b/libs/libpng-1.2.8/scripts/makefile.linux
@@ -8,7 +8,7 @@ PNGMAJ = 0
 PNGMIN = 1.2.8
 PNGVER = $(PNGMAJ).$(PNGMIN)
 
-CC=gp2x-gcc
+# CC=gp2x-gcc
 
 # where "make install" puts libpng12.a, libpng12.so*,
 # libpng12/png.h and libpng12/pngconf.h
