Remove GTK references.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@94 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/smpeg-0.4.4/configure.in
+++ b/libs/smpeg-0.4.4/configure.in
@@ -191,18 +191,18 @@ if test x$enable_threaded_audio = xyes; then
 fi
 
 dnl See if we can build the GTk player
-AC_ARG_ENABLE(gtk_player,
-[  --enable-gtk-player     build a GTk sample SMPEG player [default=yes]],
-              , enable_gtk_player=yes)
-have_gtk=no
-if test x$enable_gtk_player = xyes; then
-    AM_PATH_GTK(1.2.1, have_gtk=yes)
-    if test x$have_gtk = xyes; then
-        CFLAGS="$CFLAGS $GTK_CFLAGS"
-    fi
-    AC_SUBST(GTK_LIBS)
-fi
-AM_CONDITIONAL(HAVE_GTK, test x$have_gtk = xyes)
+#AC_ARG_ENABLE(gtk_player,
+#[  --enable-gtk-player     build a GTk sample SMPEG player [default=yes]],
+#              , enable_gtk_player=yes)
+#have_gtk=no
+#if test x$enable_gtk_player = xyes; then
+#    AM_PATH_GTK(1.2.1, have_gtk=yes)
+#    if test x$have_gtk = xyes; then
+#        CFLAGS="$CFLAGS $GTK_CFLAGS"
+#    fi
+#    AC_SUBST(GTK_LIBS)
+#fi
+#AM_CONDITIONAL(HAVE_GTK, test x$have_gtk = xyes)
 
 dnl See if we can build the Mesa player
 AC_ARG_ENABLE(opengl_player,
