Welcome back, smpeg... and a makefile for those arm-linux folk.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@99 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/makefile.arm-linux
+++ b/libs/makefile.arm-linux
@@ -1,7 +1,7 @@
 
  BUILD  = $(shell uname -m)
- HOST   = gp2x
- TARGET = gp2x
+ HOST   = arm-linux
+ TARGET = arm-linux
  PREFIX = /usr/local/gp2xdev
  FLAGS  = CC='$(HOST)-gcc' CXX='$(HOST)-g++' CFLAGS='-I$(PREFIX)/include -I$(PREFIX)/include/libxml2' LDFLAGS='-L$(PREFIX)/lib'
 
