Modified the makefile to automatically generate the gp2xkerne.img after building.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@122 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/linux-open2x/arch/arm/boot/Makefile
+++ b/linux-open2x/arch/arm/boot/Makefile
@@ -144,6 +144,7 @@ bzImage: zImage
 
 zImage:	compressed/vmlinux
 	$(OBJCOPY) $(OBJCOPYFLAGS) $< $@
+	$(TOPDIR)/scripts/mkimage -A arm -O linux -T kernel -C none -a 00008000 -e 00008000 -n "Open2x Kernel" -d zImage kernel.img
 
 bootpImage: bootp/bootp
 	$(OBJCOPY) $(OBJCOPYFLAGS) $< $@
