--- a/libs/lua-5.1/src/Makefile
+++ b/libs/lua-5.1/src/Makefile
@@ -22,7 +22,7 @@ MYLIBS=
 
 PLATS= aix ansi bsd generic linux macosx mingw posix solaris
 
-LUA_A=	liblua.a
+LUA_A=	liblua.a liblualib.a
 CORE_O=	lapi.o lcode.o ldebug.o ldo.o ldump.o lfunc.o lgc.o llex.o lmem.o \
 	lobject.o lopcodes.o lparser.o lstate.o lstring.o ltable.o ltm.o  \
 	lundump.o lvm.o lzio.o
