--- a/libs/lua-5.1/src/Makefile
+++ b/libs/lua-5.1/src/Makefile
@@ -7,7 +7,7 @@
 # Your platform. See PLATS for possible values.
 PLAT= none
 
-CC= open2x-gcc
+CC= open2x-gcc -static
 CFLAGS= -I$(OPEN2X)/include -O2 -Wall $(MYCFLAGS)
 AR= ar rcu
 RANLIB= ranlib
