Added build rules for python.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@131 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/makefile
+++ b/libs/makefile
@@ -5,6 +5,7 @@
  PREFIX = $(OPEN2X)
  FLAGS  = CC='$(HOST)-gcc' CXX='$(HOST)-g++' CFLAGS='-I$(PREFIX)/include -I$(PREFIX)/include/libxml2' LDFLAGS='-L$(PREFIX)/lib'
 
+ TARGETS += $(PREFIX)/bin/python
  TARGETS += $(PREFIX)/lib/libSDL.a
  TARGETS += $(PREFIX)/lib/libSDL_gfx.a
  TARGETS += $(PREFIX)/lib/libSDL_image.a
@@ -99,6 +100,10 @@
  ncurses: $(PREFIX)/lib/libncurses.a
  $(PREFIX)/lib/libncurses.a:
 	cd ncurses-5.5 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && make && make install && make clean
+
+ python: $(PREFIX)/bin/python
+ $(PREFIX)/bin/python:
+	mkdir -p python-2.4.3/build && cd python-2.4.3/build && $(FLAGS) ../configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --with-shared --with-static && make && make install && make clean
 
  readline: $(PREFIX)/lib/libreadline.a
  $(PREFIX)/lib/libreadline.a:
