--- a/libs/makefile
+++ b/libs/makefile
@@ -11,6 +11,7 @@
  FLAGS   = CC='$(CC)' CXX='$(CXX)' CFLAGS='$(CFLAGS)' LDFLAGS='$(LDFLAGS)'
 
  TARGETS += $(PREFIX)/bin/python
+ TARGETS += $(PREFIX)/lib/libImlib2.a
  TARGETS += $(PREFIX)/lib/libSDL.a
  TARGETS += $(PREFIX)/lib/libSDL_gfx.a
  TARGETS += $(PREFIX)/lib/libSDL_image.a
@@ -20,7 +21,6 @@
  TARGETS += $(PREFIX)/lib/libbz2.a
  TARGETS += $(PREFIX)/lib/libfreetype.a
  TARGETS += $(PREFIX)/lib/libid3tag.a
- TARGETS += $(PREFIX)/lib/libimlib2.a
  TARGETS += $(PREFIX)/lib/libjpeg.a
  TARGETS += $(PREFIX)/lib/liblua.a
  TARGETS += $(PREFIX)/lib/libmad.a
@@ -47,23 +47,23 @@
 	cd SDL-1.2.9 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-pthreads --enable-pthreads-sem --enable-threads && make && make install && make clean
 
  SDL_gfx: $(PREFIX)/lib/libSDL_gfx.a
- $(PREFIX)/lib/libSDL_gfx.a: SDL
+ $(PREFIX)/lib/libSDL_gfx.a: $(PREFIX)/lib/libSDL.a
 	cd SDL_gfx-2.0.13 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --disable-mmx && make && make install && make clean
 
  SDL_image: $(PREFIX)/lib/libSDL_image.a
- $(PREFIX)/lib/libSDL_image.a: SDL libjpeg libpng
+ $(PREFIX)/lib/libSDL_image.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libjpeg.a $(PREFIX)/lib/libpng.a
 	cd SDL_image-1.2.4 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) && make && make install && make clean
 
  SDL_mixer: $(PREFIX)/lib/libSDL_mixer.a
- $(PREFIX)/lib/libSDL_mixer.a: SDL libmikmod smpeg tremor
+ $(PREFIX)/lib/libSDL_mixer.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libsmpeg.a $(PREFIX)/lib/libvorbisidec.a
 	cd SDL_mixer-1.2.6 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --enable-music-mp3=yes --enable-music-libmikmod=no && make && make install && make clean
 
  SDL_svg: $(PREFIX)/lib/libSDL_svg.a
- $(PREFIX)/lib/libSDL_svg.a: SDL libxml2
+ $(PREFIX)/lib/libSDL_svg.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libxml2.a
 	cd SDL_svg-1.1.9 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) && make && make install && make clean
 
  SDL_ttf: $(PREFIX)/lib/libSDL_ttf.a
- $(PREFIX)/lib/libSDL_ttf.a: SDL freetype
+ $(PREFIX)/lib/libSDL_ttf.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libfreetype.a
 	cd SDL_ttf-2.0.7 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-freetype-prefix=$(PREFIX) --with-sdl-prefix=$(PREFIX) && make && make install && make clean
 
  bzip2: $(PREFIX)/lib/libbz2.a
@@ -74,8 +74,8 @@
  $(PREFIX)/lib/libfreetype.a:
 	cd freetype-2.1.10 && GNUMAKE=make ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && make && make install && make clean
 
- imlib2: $(PREFIX)/lib/libimlib2.a
- $(PREFIX)/lib/libimlib2.a: libjpeg libpng libtiff zlib bzip2 libid3tag
+ imlib2: $(PREFIX)/lib/libImlib2.a
+ $(PREFIX)/lib/libImlib2.a: $(PREFIX)/lib/libjpeg.a $(PREFIX)/lib/libpng.a $(PREFIX)/lib/libtiff.a $(PREFIX)/lib/libungif.a $(PREFIX)/lib/libz.a $(PREFIX)/lib/libbz2.a $(PREFIX)/lib/libid3tag.a $(PREFIX)/lib/libfreetype.a
 	cd imlib2-1.2.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --disable-shared --enable-static --with-freetype-config=$(PREFIX)/bin/freetype-config --without-x && make && make install && make clean
 
  libid3tag: $(PREFIX)/lib/libid3tag.a
@@ -99,7 +99,7 @@
 	cd libogg-1.1.3 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && make && make install && make clean
 
  libpng: $(PREFIX)/lib/libpng.a
- $(PREFIX)/lib/libpng.a: zlib
+ $(PREFIX)/lib/libpng.a: $(PREFIX)/lib/libz.a
 	cd libpng-1.2.8 && $(FLAGS) make -f scripts/makefile.linux && $(FLAGS) make -f scripts/makefile.linux install && $(FLAGS) make -f scripts/makefile.linux clean
 
  libtiff: $(PREFIX)/lib/libtiff.a
@@ -111,7 +111,7 @@
 	cd libungif-4.1.4 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && make && make install && make clean
 
  libvorbis: $(PREFIX)/lib/libvorbis.a
- $(PREFIX)/lib/libvorbis.a: libogg
+ $(PREFIX)/lib/libvorbis.a: $(PREFIX)/lib/libogg.a
 	cd libvorbis-1.1.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-ogg=$(PREFIX) && make && make install && make clean
 
  libxml2: $(PREFIX)/lib/libxml2.a
@@ -119,7 +119,7 @@
 	cd libxml2-2.6.23 && ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && make && make install && make clean
 
  lua: $(PREFIX)/lib/liblua.a
- $(PREFIX)/lib/liblua.a: ncurses readline
+ $(PREFIX)/lib/liblua.a: $(PREFIX)/lib/libreadline.a $(PREFIX)/lib/libncurses.a
 	cd lua-5.1 && make && make install && make clean
 
  ncurses: $(PREFIX)/lib/libncurses.a
