Changed the installation path.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@149 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/firmware/lua-5.1/Makefile
+++ b/firmware/lua-5.1/Makefile
@@ -11,7 +11,7 @@ PLAT= linux
 # if INSTALL_TOP is not an absolute path. (Man pages are installed from the
 # doc directory.)
 #
-INSTALL_TOP= $(OPEN2X)
+INSTALL_TOP= $(OPEN2X)/firmware/usr
 INSTALL_BIN= $(INSTALL_TOP)/bin
 INSTALL_INC= $(INSTALL_TOP)/include
 INSTALL_LIB= $(INSTALL_TOP)/lib
