Optimization and standardization.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@156 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/toolchain/makefile
+++ b/toolchain/makefile
@@ -1,9 +1,13 @@
 
- BUILD  = $(shell uname -m)
- HOST   = open2x
- TARGET = open2x
- PREFIX = $(OPEN2X)
- FLAGS  = 
+ BUILD   = $(shell uname -m)
+ HOST    = open2x
+ TARGET  = open2x
+ PREFIX  = $(OPEN2X)
+
+ FLAGS += CC='$(HOST)-gcc'
+ FLAGS += CXX='$(HOST)-g++'
+ FLAGS += CFLAGS='-I$(OPEN2X)/include -I$(OPEN2X)/include/libxml2'
+ FLAGS += LDFLAGS='-L$(OPEN2X)/lib -R$(OPEN2X)/lib'
 
  TARGETS += $(PREFIX)/$(TARGET)/include/linux/version.h
  TARGETS += $(PREFIX)/bin/$(TARGET)-ar
