Optimization and standardization.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@157 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/firmware/makefile
+++ b/firmware/makefile
@@ -1,8 +1,8 @@
 
- BUILD  = '$(shell uname -m)'
- HOST   = 'open2x'
- TARGET = 'open2x'
- PREFIX = '$(shell pwd)/temp'
+ BUILD  = $(shell uname -m)
+ HOST   = open2x
+ TARGET = open2x
+ PREFIX = $(shell pwd)/temp
 
  FLAGS += CC='open2x-gcc'
  FLAGS += CXX='open2x-g++'
