Added music to the hello world sample, and cleaned up the makefile a bit.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@168 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/samples/hello/Makefile
+++ b/samples/hello/Makefile
@@ -1,8 +1,8 @@
 
   CC      = open2x-gcc
-  CFLAGS  = -static -Wall -pedantic -std=c99 -Os $(shell $(OPEN2X)/bin/sdl-config --cflags)
-  LDFLAGS = $(shell $(OPEN2X)/bin/sdl-config --libs) -lSDL_image -lSDL_ttf -lSDL_mixer -lSDL_gfx -lvorbisidec -lsmpeg -lpng -lz -ljpeg -lfreetype -lm
   STRIP   = open2x-strip --strip-all
+  CFLAGS  = -static -Wall -pedantic -std=c99 -Os $(shell $(OPEN2X)/bin/sdl-config --cflags)
+  LDFLAGS = -lSDL_image -lSDL_ttf -lSDL_mixer -lSDL_gfx -lsmpeg $(shell $(OPEN2X)/bin/sdl-config --libs) -lvorbisidec -lpng -lz -ljpeg -lfreetype -lm -lvorbisidec
   PREFIX  = /media/GP2X/Demos/hello
 
   all: hello.gpe
@@ -13,7 +13,7 @@
 	rm -f hello.gpe
 
   hello.gpe: hello.c
-	$(CC) $(CFLAGS) hello.c -o hello.gpe $(LDFLAGS) $(LDFLAGS)
+	$(CC) $(CFLAGS) hello.c -o hello.gpe $(LDFLAGS)
 	$(STRIP) hello.gpe
 
   install: hello.gpe
